syntax = "proto3";

package restaurant;
option go_package = "github.com/MSFT/pkg/services/restaurant";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

service OrderService{
    rpc GetUpToDateOrderList(GetUpToDateOrderListRequest) returns (GetUpToDateOrderListResponse) {
        option (google.api.http) = {
            get: "/restaurant/orders"
        };
    }
}

message GetUpToDateOrderListRequest {}

message GetUpToDateOrderListResponse {
    repeated Order total_orders = 1;
    repeated OrdersByOffice total_orders_by_company = 2;
}

message OrdersByOffice {
    string company_id = 1;
    string office_name = 2;
    string office_address = 3;
    repeated Order result = 4;
}

message Order {
    string product_id = 1;
    string product_name = 2;
    int64 count = 3;
}
